// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table addDel 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div-page>
`;

exports[`Table clears missing slot 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table confirms & clears list 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table confirms & clears list 2`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Confirm
  </button>
</div-page>
`;

exports[`Table confirms & clears list 3`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enables a slot 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
          <th>
            ColC
          </th>
          <th>
            ColD
          </th>
          <th>
            ColE
          </th>
          <th>
            ColF
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              2001/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c1
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE1"
                type="button"
              >
                1/a1
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2002/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColEA2"
                type="button"
              >
                A2/a2
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              B2
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEditA2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDelA2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColA"
                style="width: 10em;"
                value="a"
              />
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                <input
                  data-testid="inputColB1"
                  type="checkbox"
                />
                 
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColC"
                style="width: 10em;"
                value="2000/01/01"
              />
            </column-text>
          </td>
          <td>
            <column-text>
              <div>
                id
              </div>
              <input
                class="form-control"
                data-testid="inputColD"
                style="width: 10em; background: red;"
                value=""
              />
              <div>
                bc
              </div>
              <input
                class="form-control"
                data-testid="inputViewColD"
                style="width: 10em; background: red;"
                value=""
              />
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              <div>
                bc
              </div>
              <input
                class="form-control"
                data-testid="inputColF"
                style="width: 10em; background: red;"
                value=""
              />
              <div>
                id
              </div>
              <input
                class="form-control"
                data-testid="inputViewColF"
                style="width: 10em; background: red;"
                value=""
              />
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonSave"
              type="button"
            >
              Save
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonCancel"
              type="button"
            >
              Cancel
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 2`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
          <th>
            ColC
          </th>
          <th>
            ColD
          </th>
          <th>
            ColE
          </th>
          <th>
            ColF
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              2001/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c1
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE1"
                type="button"
              >
                1/a1
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2002/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColEA2"
                type="button"
              >
                A2/a2
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              B2
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEditA2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDelA2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColA"
                style="width: 10em;"
                value="a3"
              />
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                <input
                  data-testid="inputColB1"
                  type="checkbox"
                />
                 
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColC"
                style="width: 10em; background: red;"
                value="2022-01-04"
              />
            </column-text>
          </td>
          <td>
            <column-text>
              <div>
                id
              </div>
              <input
                class="form-control"
                data-testid="inputColD"
                style="width: 10em; background: red;"
                value=""
              />
              <div>
                bc
              </div>
              <input
                class="form-control"
                data-testid="inputViewColD"
                style="width: 10em; background: red;"
                value=""
              />
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              <div>
                bc
              </div>
              <input
                class="form-control"
                data-testid="inputColF"
                style="width: 10em; background: red;"
                value=""
              />
              <div>
                id
              </div>
              <input
                class="form-control"
                data-testid="inputViewColF"
                style="width: 10em; background: red;"
                value=""
              />
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonSave"
              type="button"
            >
              Save
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonCancel"
              type="button"
            >
              Cancel
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 3`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
          <th>
            ColC
          </th>
          <th>
            ColD
          </th>
          <th>
            ColE
          </th>
          <th>
            ColF
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              2001/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c1
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE1"
                type="button"
              >
                1/a1
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2002/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColEA2"
                type="button"
              >
                A2/a2
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              B2
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEditA2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDelA2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a3
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2022/01/04
            </column-text>
          </td>
          <td>
            <column-text>
              c1
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE3"
                type="button"
              >
                3/a3
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit3"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel3"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table enters row into list 4`] = `
<p
  data-testid="msg"
/>
`;

exports[`Table enters row into list 5`] = `
<p
  data-testid="msg"
>
  ColE - 3/a3
</p>
`;

exports[`Table import export 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
  <div>
    <button
      data-testid="buttonImport.csv"
    >
      Import 
      .csv
    </button>
  </div>
  <div>
    <button
      data-testid="buttonExport.csv"
    >
      Export 
      .csv
    </button>
  </div>
</div-page>
`;

exports[`Table import export 2`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
  <div>
    <button
      data-testid="buttonImport.csv"
    >
      Import 
      .csv
    </button>
  </div>
  <div>
    <button
      data-testid="buttonExport.csv"
    >
      Export 
      .csv
    </button>
    <div
      style="border: 1px solid orange; margin: .5em;"
    >
      <button
        data-testid="buttonExportAccept.csv"
      >
        Accept
      </button>
      <h4>
        A.csv
      </h4>
      <pre
        style="overflow: scroll; white-space: pre-wrap;"
      >
        id,aa,ab,ac
1,a1,1,2001/01/01
2,a2,,2002/01/01,1
      </pre>
    </div>
  </div>
</div-page>
`;

exports[`Table inlineHeaders 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <div>
              <div>
                <b>
                  ColA
                </b>
              </div>
              <div>
                <column-text>
                  a1
                </column-text>
              </div>
            </div>
          </td>
          <td>
            <div>
              <div>
                <b>
                  ColB
                </b>
              </div>
              <div>
                <column-set>
                  <div>
                    c1
                  </div>
                </column-set>
              </div>
            </div>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 1`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 2`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    2
     - 
    2
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 3`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    2
     - 
    2
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Table pages next prev 4`] = `
<div-page
  data-testid="tableA"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;
